[package]
name = "rust_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_cell = "1.0.0"
heapless = { version = "0.7.16", features = ["x86-sync-pool"] }

[dependencies.stm32f4]
version = "0.15.1"
features = ["stm32f401"]
